[package]
name = "job_controller"
version = "0.1.0"
authors = ["Andrei Dobre <andreidobre.web@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.3"
joblib = { path = "../joblib" }
tonic = "0.4.3"
prost = "0.7.0"
