[package]
name = "tmp"
version = "0.1.0"
authors = ["Andrei Dobre <andreidobre.web@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
